	* Tourists start with more darts to compensate for more training being
	  needed to advance weapon skills
	* The #enhance menu now indicates when skills require "just a little"
	  more exercise before they may be enhanced
	* Player can wish for up to 100 projectiles (from UnNetHackPlus)
	* Land mines and beartraps weigh less (from UnNetHackPlus)

	* Artifact changes:
	  - From SporkHack:
	    - All the weapons below warn against and have 20% instakill chance 
	      against their target monsters.
	    - Dragonbane is now a dwarvish spear that conveys fire, cold, shock,
	      acid, poison, acid, and disintegration resistance while wielded.
	    - Giantslayer is now a sling that gives 18/** STR while wielded or
	      in the alternate weapon slot.
	    - Werebane conveys polymorph control while wielded.
	    - Ogresmasher gives 25 CON while wielded.
	    - Trollsbane prevents trolls from leaving corpses while wielded.
	  - Other:
	    - Luck Blade added, first sacrifice gift for Convicts
	    - Grimtooth is the first sacrifice gift for Rogues; it is now
	      permanently poisoned and grants poison resistance while wielded

	* New config option for customizing monster letter in UTF8graphics:
	  MONSTERSYMBOL='horse':U+0127 # latin small letter h with stroke

	* removed monsters:
	  - anti-matter vortex

	* Livelog: report bag of holding explosions

	* New role: Convict class

	* new monsters:
	  - locusts (from SporkHack)
	  - weeping angels
	  - weeping archangels
	  - deep orcs

	* dungeon layout:
	  - length of Town branch reduced and special filler level added
	  - new branch: The Ruins of Moria

	* Options:
	  - default of sortloot changed to 'loot'
	  - Allow exact numbers in STATUSCOLOR settings (from NAO)
	  - Permanent hallucination option: perma_hallu
	  - New option: wound_message. Healers can recieve Crawl-style damage
	    messages indicating the current health of their foes

	* Role differentiation: